PROJECT(simlog)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
INCLUDE(FindPkgConfig)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
MACRO(CMAKE_USE_FULL_RPATH install_rpath)
    SET(CMAKE_SKIP_BUILD_RPATH  FALSE)
    SET(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE) 
    SET(CMAKE_INSTALL_RPATH ${install_rpath})
    SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
ENDMACRO(CMAKE_USE_FULL_RPATH)
CMAKE_USE_FULL_RPATH("${CMAKE_INSTALL_PREFIX}/lib")

pkg_check_modules(DFKI_TYPES REQUIRED "dfki-types")
INCLUDE_DIRECTORIES(${DFKI_TYPES_INCLUDE_DIRS})
LINK_DIRECTORIES(${DFKI_TYPES_LIBRARY_DIRS})

pkg_check_modules(TYPELIB REQUIRED "typelib")
INCLUDE_DIRECTORIES(${TYPELIB_INCLUDE_DIRS})
LINK_DIRECTORIES(${TYPELIB_LIBRARY_DIRS})

ADD_LIBRARY(simlog SHARED loginput.cc)
TARGET_LINK_LIBRARIES(simlog ${DFKI_TYPES_LIBRARIES})

INSTALL(TARGETS simlog
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib)
INSTALL(FILES loginput.hh DESTINATION include)

